--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.10.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.11"
   },
